[package]
name = "tasks-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.1.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1"
axum = { version = "0.6.20" }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
hyper = { version = "0.14.25", features = ["full"] }
log = { version = "0.4.20" }
serde_json = { version = "1.0.95" }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }